# job-ads-parser

./: .gitignore  README.md  pyproject.toml
examples/: compare_model_benchmarks.py  create_bielik_ollama_model.sh  csv_review_guidelines.md  eval_gold_skills_pl.jsonl  eval_gold_skills_pl_hard.jsonl  generate_synthetic_jobs.py  kprm_warszawa_live_10.jsonl  run_build_finetune_corpus.sh  run_eval_finetuned_gliner.sh  run_eval_gliner_suite.sh  run_eval_hf_suite.sh  run_eval_local_models_benchmark.sh  run_eval_ollama.sh  run_eval_ollama_suite.sh  run_eval_passthrough.sh  run_eval_passthrough_suite.sh  run_finetune_gliner_fair.sh  run_finetune_gliner_smoke.sh  run_generated_batch.sh  run_generated_bielik_batch.sh  run_generated_ollama_batch.sh  run_prepare_gliner_training_data.sh  run_prepare_review_csv.sh  run_prepare_review_queue.sh  run_server_example.sh  run_server_ollama_example.sh  run_tests.sh  sample_esco_skills.csv  sample_jobs.jsonl  sample_review_template.csv  show_eval_report.sh  summarize_eval_suite.py  train_gold_skills_pl.jsonl
src/esco_skill_batch/: __main__.py  cli.py  esco.py  evaluation.py  extractors.py  gliner_training.py  io_utils.py  matching.py  normalization.py  prompt_presets.py  review_workflow.py  runtime.py  text_utils.py  types.py
tests/: __init__.py  helpers.py  test_cli.py  test_esco.py  test_evaluation.py  test_example_scripts.py  test_extractors.py  test_gliner_training.py  test_matching.py  test_review_workflow.py  test_runtime.py  test_training_corpora.py
