[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "esco-skill-batch"
version = "0.1.0"
description = "Batch extraction of job-ad skills mapped to ESCO concepts."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "OpenAI Codex" }
]
dependencies = []

[project.optional-dependencies]
embedding = [
  "numpy>=1.26",
  "sentence-transformers>=3.0"
]
gliner = [
  "gliner>=0.2.16"
]
hf = [
  "accelerate>=1.2",
  "sentencepiece>=0.2.0",
  "torch>=2.2",
  "transformers>=4.49"
]
dev = [
  "pytest>=8.2",
  "numpy>=1.26",
  "sentence-transformers>=3.0",
  "gliner>=0.2.16",
  "accelerate>=1.2",
  "sentencepiece>=0.2.0",
  "torch>=2.2",
  "transformers>=4.49"
]

[project.scripts]
esco-skill-batch = "esco_skill_batch.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
